--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,19 +83,20 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   margin: 0;
   padding: 6px 0;
   line-height: 1;
-  font-weight: 400;
-  letter-spacing: 2px;
+  font-weight: bold;
+  letter-spacing: .25rem;
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #7a6960;
+  color: #e86d31;
   text-decoration: none;
 }
 
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  margin-bottom: 1rem;
+  max-height: 3rem;
 }
 
 #main {
