--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-
-/*** 
-
-====================================================================
-                          Css For Naxly
-====================================================================
-
-***/
-
-
 /************ TABLE OF CONTENTS ***************
 1. Fonts
 2. Reset
@@ -61,6 +51,10 @@
 ====================================================================
 
 ***/
+
+.lightbox-image{
+	padding-top: 1.5rem;
+}
 
 
 /** banner-section **/
@@ -2389,10 +2383,9 @@
 .case-block-two .inner-box .image-box .client-box .client-logo{
 	position: relative;
 	display: inline-block;
-	background: #fff;
-	width: 72px;
-	height: 72px;
-	text-align: center;
+	width: 6.375rem;
+	height: 6.375rem;
+	text-align: top;
 	border-radius: 50%;
 	padding: 15px;
 	cursor: pointer;
@@ -7344,6 +7337,7 @@ h3 a{
 	height: 140px;
 	border: 3px solid #fff;
 	border-radius: 50%;
+	right: -3.25rem;
 }
 
 .team-block-two .inner-box .image-box img{
@@ -7354,7 +7348,7 @@ h3 a{
 
 .team-block-two .inner-box .image-box .contact-box{
 	position: absolute;
-	right: -84px;
+	right: -9rem;
 	bottom: -58px;
 	width: 50px;
 	height: 110px;
